test/compile_errors/stage1/obj/regression_test_2980_base_type_u32_is_not_type_checked_properly_when_assigning_a_value_within_a_struct.zig
const Foo = struct {
    ptr: ?*usize,
    uval: u32,
};
fn get_uval(x: u32) !u32 {
    _ = x;
    return error.NotFound;
}
export fn entry() void {
    const afoo = Foo{
        .ptr = null,
        .uval = get_uval(42),
    };
    _ = afoo;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:12:25: error: cannot convert error union to payload type. consider using `try`, `catch`, or `if`. expected type 'u32', found '@typeInfo(@typeInfo(@TypeOf(get_uval)).Fn.return_type.?).ErrorUnion.error_set!u32'
